Fixed z-index issue for sub-menu/main menu item
Top Level Menu Items bleed through sub items
https://app.asana.com/0/9056903824374/19820146149246

--- a/elements/upfront-newnavigation/css/unewnavigation-style.css
+++ b/elements/upfront-newnavigation/css/unewnavigation-style.css
@@ -6,6 +6,7 @@ div.upfront-navigation ul, div.upfront-navigation ul li {
 
 div.upfront-navigation ul.sub-menu {
   display: none;
+  z-index:2;
 }
 
 div.upfront-navigation div[data-style="horizontal"] li.menu-item:hover > ul.sub-menu,
